# ECE464-Final-Project

./: .env.example  .gitignore  alembic.ini  drop_tables.py  pyproject.toml  railway.json
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_spotify.py  0003_supabase_auth.py  0004_embeddings.py  0005_social_features.py  0006_private_accounts.py  0007_taste_profile.py  0008_list_likes.py  0009_list_extras.py
backend/: requirements.txt
backend/app/: auth.py  database.py  embeddings.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: auth.py  charts.py  lists.py  music.py  recommendations.py  search.py  social.py  spotify.py  stats.py  users.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: AlbumCard.jsx  Navbar.jsx  RecommendModal.jsx  ReviewCard.jsx  ReviewList.jsx  StarRating.jsx  StatsPostcard.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/pages/: AlbumPage.jsx  ArtistPage.jsx  Charts.jsx  Discover.jsx  Home.jsx  ListDetail.jsx  Lists.jsx  Login.jsx  Profile.jsx  Register.jsx  Search.jsx  SongPage.jsx  Stats.jsx
